fixed layout shift on intro mobile

--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -12,12 +12,14 @@
   padding-right: 0;
   padding-bottom: 0;
   position: relative;
+  top: calc(-1 * $nav-size / 2);
 
   @include media(screen('mobile')) {
     grid-template-rows: repeat(1, 1fr);
     grid-template-columns: repeat(3, 1fr);
     height: 100vh;
     height: var(--doc-height);
+    top: 0;
   }
 
   &__anchor {
